# c-snippets

./: .gitignore  .gitmodules  Makefile.include  README
anykey/: Makefile  anykey.c
atoi/: Makefile  atoi.c
autotools-example/: Makefile.am  autogen.sh  configure.ac
autotools-example/include/: hello.h
backtrace/: Makefile  backtrace.c
bin2c/: Makefile
bitwise/: Makefile  bw.c
blocks/: Makefile  blocks.c
cmake-example/: CMakeLists.txt
dbg_macros/: Makefile  dbg.c
dbus/: client.c  common.h  interface.xml  server.c
dbus/example/: License  Makefile  client.c  common.h  interface.xml  server.c
dhrystone/: Makefile  RATIONALE  README_C  VARIATIONS  dhry.h  dhry_1.c  dhry_2.c
empty/: Makefile  empty.c
fibonacci/: Makefile  fibonacci.c
fizzbuzz/: Makefile  fb.c
flexible_array_member/: Makefile  fam.c
fork/: Makefile  fork.c
fptr/: Makefile  fptr.c
game_of_life/: Makefile  gol.c
game_of_life/c/: CMakeLists.txt  Makefile  gol.c
game_of_life/cpp/: CMakeLists.txt  Cell.cpp  Cell.h  World.cpp  World.h  gol.cpp
game_of_life/cpp/tests/: cell.cpp
hello/amd64/: Makefile  hello.S
hello/armv7/: Makefile  hello.S
hello/c/: Makefile  hello.c
hello/cpp/: Makefile  (+1 more)
json/: Makefile  input.json  json.c  schema.json
linkedlist/: Makefile  ll.c
linpack/: Makefile  linpack.c
mem_layout/: Makefile  memlayout.c
mt/: Makefile  mt.c
ncurses/: Makefile  curses.c
nqueen/: Makefile  nqueen.c
palindrome/: Makefile  pal.c
polym/: Makefile  polym.cpp
popcount/: Makefile  popcount.c
primes/: Makefile  primes.c
range_expr/: Makefile  range.c
revstr/: Makefile  revstr.c
scripts/: checkpatch.pl
signals/: Makefile  signals.c
sizeof/: Makefile  sizeof.c
sockets/: Makefile  Makefile.client  Makefile.server  client.c  interface.h  server.c
stringify/: Makefile  stringify.c
strparse/: Makefile  strparse.c
trigraphs/: Makefile  trigraphs.c
unicode/: Makefile  unic.c
union/: Makefile  union.c
unset_lowest_bit/: Makefile  ulb.c
vaargs/: Makefile  vargs.c
whetstone/: Makefile  whetstone.c
(+11 files in other folders)
